@@ -23,8 +23,6 @@ import javax.xml.namespace.QName;
 import net.opengis.wfs.XlinkPropertyNameType;
 import net.opengis.wfs20.ResultTypeType;
 import net.opengis.wfs20.StoredQueryType;
-import net.sf.cglib.proxy.Enhancer;
-import net.sf.cglib.proxy.LazyLoader;
 import org.geoserver.catalog.AttributeTypeInfo;
 import org.geoserver.catalog.Catalog;
 import org.geoserver.catalog.FeatureTypeInfo;
@@ -48,7 +46,6 @@ import org.geotools.data.DataUtilities;
 import org.geotools.data.FeatureSource;
 import org.geotools.data.Join;
 import org.geotools.data.simple.SimpleFeatureCollection;
-import org.geotools.factory.Hints;
 import org.geotools.feature.FeatureCollection;
 import org.geotools.feature.NameImpl;
 import org.geotools.feature.SchemaException;
@@ -67,7 +64,8 @@ import org.geotools.geometry.jts.ReferencedEnvelope;
 import org.geotools.gml3.GML;
 import org.geotools.referencing.CRS;
 import org.geotools.referencing.crs.DefaultGeographicCRS;
-import org.geotools.xml.Encoder;
+import org.geotools.util.factory.Hints;
+import org.geotools.xsd.Encoder;
 import org.locationtech.jts.geom.Polygon;
 import org.opengis.feature.Feature;
 import org.opengis.feature.simple.SimpleFeatureType;
@@ -115,6 +113,8 @@ import org.opengis.filter.temporal.TContains;
 import org.opengis.filter.temporal.TEquals;
 import org.opengis.metadata.extent.GeographicBoundingBox;
 import org.opengis.referencing.crs.CoordinateReferenceSystem;
+import org.springframework.cglib.proxy.Enhancer;
+import org.springframework.cglib.proxy.LazyLoader;
 import org.xml.sax.helpers.NamespaceSupport;
 
 /**
@@ -764,6 +764,9 @@ public class GetFeature {
                 // optimization: if count < max features then total count == count
                 // can't use this optimization for v2
                 totalCount = BigInteger.valueOf(count);
+            } else if (isPreComputed(totalCountExecutors)) {
+                long total = getTotalCount(totalCountExecutors);
+                totalCount = BigInteger.valueOf(total);
             } else {
                 // ok, in this case we're forced to run the queries to discover the actual total
                 // count
@@ -777,18 +780,7 @@ public class GetFeature {
 
                             @Override
                             public Object loadObject() throws Exception {
-                                long totalCount = 0;
-                                for (CountExecutor q : totalCountExecutors) {
-                                    int result = q.getCount();
-                                    // if the count is unknown for one, we don't know the total,
-                                    // period
-                                    if (result == -1) {
-                                        totalCount = -1;
-                                        break;
-                                    } else {
-                                        totalCount += result;
-                                    }
-                                }
+                                long totalCount = getTotalCount(totalCountExecutors);
                                 return BigInteger.valueOf(totalCount);
                             }
                         });
@@ -813,6 +805,32 @@ public class GetFeature {
                 results,
                 lockId,
                 getFeatureById);
+    }
+
+    /** Returns true if all count executors are given a static count value */
+    private boolean isPreComputed(List<CountExecutor> totalCountExecutors) {
+        for (CountExecutor q : totalCountExecutors) {
+            if (!q.isCountSet()) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    private long getTotalCount(List<CountExecutor> totalCountExecutors) throws IOException {
+        long totalCount = 0;
+        for (CountExecutor q : totalCountExecutors) {
+            int result = q.getCount();
+            // if the count is unknown for one, we don't know the total,
+            // period
+            if (result == -1) {
+                totalCount = -1;
+                break;
+            } else {
+                totalCount += result;
+            }
+        }
+        return totalCount;
     }
 
     private Filter toFeatureIdFilter(List<FeatureId> lockedFeatures) {
@@ -1212,6 +1230,21 @@ public class GetFeature {
         if (declaredCRS != null) {
             transformedFilter =
                     WFSReprojectionUtil.normalizeFilterCRS(filter, source.getSchema(), declaredCRS);
+        } else {
+            // this may happen with complex features, let's try to use the feature type info CRS
+            FeatureTypeInfo featureTypeInfo =
+                    catalog.getFeatureTypeByName(
+                            primaryTypeName.getPrefix(), primaryTypeName.getLocalPart());
+            if (featureTypeInfo != null && featureTypeInfo.getCRS() != null) {
+                // the feature type info has a CRS defined, so let's use it
+                transformedFilter =
+                        WFSReprojectionUtil.normalizeFilterCRS(
+                                filter,
+                                source.getSchema(),
+                                WFSReprojectionUtil.getDeclaredCrs(
+                                        featureTypeInfo.getCRS(), wfsVersion),
+                                featureTypeInfo.getCRS());
+            }
         }
 
         // replace gml:boundedBy with an expression
@@ -1369,7 +1402,7 @@ public class GetFeature {
     static Integer traverseXlinkDepth(String raw) {
         Integer traverseXlinkDepth = null;
         try {
-            traverseXlinkDepth = new Integer(raw);
+            traverseXlinkDepth = Integer.valueOf(raw);
         } catch (NumberFormatException nfe) {
             // try handling *
             if ("*".equals(raw)) {
@@ -1377,7 +1410,7 @@ public class GetFeature {
                 // might be reported in teh acapabilitis document, using
                 // INteger.MAX_VALUE will result in stack overflow... for now
                 // we just use 10
-                traverseXlinkDepth = new Integer(2);
+                traverseXlinkDepth = Integer.valueOf(2);
             } else {
                 // not wildcard case, throw original exception
                 throw nfe;
@@ -1407,6 +1440,7 @@ public class GetFeature {
         return meta;
     }
 
+    @SuppressWarnings("PMD.UnusedLocalVariable")
     List<List<String>> parsePropertyNames(Query query, List<FeatureTypeInfo> featureTypes) {
         List<List<String>> propNames = new ArrayList();
         for (FeatureTypeInfo featureType : featureTypes) {
